# Alpine-Passes

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  index.html  package.json  run1.json
.github/: copilot-instructions.md
crates/leisure-core/: Cargo.toml  README.md
crates/leisure-core/src/: astar.rs  breaks.rs  corridor.rs  ears.rs  extras.rs  finalize.rs  graph.rs  heuristics.rs  intent.rs  lib.rs  lunch.rs  optimizer.rs  phase4_orchestrator.rs  route_geom.rs  tour_dto.rs  types.rs  ui_options.rs  wasm_api.rs
crates/leisure-core/src/wasm_api/: finalize.rs  heuristics.rs  mod.rs  phase4.rs  route_geom.rs  tour_dto.rs
crates/leisure-core/tests/: astar.rs  breaks.rs  breaks_clock.rs  corridor.rs  dedupe.rs  ears.rs  extras.rs  finalize.rs  graph.rs  heuristics.rs  intent.rs  lunch.rs  optimizer.rs  phase4_orchestrator.rs  phase4_perf.rs  r3_edge_cases.rs  route_geom.rs  tour_dto.rs  ui_options.rs  wasm_api_extras.rs  wasm_api_parity.rs  wasm_handles.rs
scripts/: dev.ps1  dev.sh
tests/: icon-assets.test.js  leisure-a-b.test.js  leisure-astar.test.js  leisure-breaks.test.js  leisure-build-helpers.test.js  leisure-corridor.test.js  leisure-ears.test.js  leisure-end-to-end.test.js  leisure-graph-runtime.test.js  leisure-graph.test.js  leisure-integration.test.js  leisure-intent.test.js  leisure-lunch.test.js  leisure-optimizer.test.js  leisure-phase-4-smoke.test.js  leisure-ui-integration.test.js  leisure-wasm-shim.test.js  leisure-wasm-size.test.js  planner-regressions.test.js  uk-ireland-coverage.test.js
tools/: build-bundle.mjs  dev_server.py  (+8 more)
(+55 files in other folders)
