[package]
name = "leisure-core"
version = "0.1.0"
edition = "2021"
description = "Rust/WASM core for the Alpine Passes leisure-first planner"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.121"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "=0.6.5"

[dev-dependencies]
once_cell = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  "-Oz",
  "--converge",
  "--enable-bulk-memory",
  "--enable-bulk-memory-opt",
  "--enable-nontrapping-float-to-int",
  "--strip-debug",
  "--strip-dwarf",
]

